--- a/front-of-house-system/index.html
+++ b/front-of-house-system/index.html
@@ -3,166 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOH Order Management</title>
+    <title>Front of House - Order Management</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e9ecef;
-            color: #333;
+            background-color: #f8f9fa;
+            color: #343a40;
             margin: 0;
-            padding: 15px;
+            padding: 20px;
         }
         h1 {
             text-align: center;
-            color: #495057;
         }
-        #orders-dashboard {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        .dashboard-container {
+            display: flex;
             gap: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .dashboard-column {
+            background-color: #ffffff;
+            border: 1px solid #dee2e6;
+            border-radius: 8px;
+            padding: 15px;
+            flex-grow: 1;
+            min-width: 300px;
+            max-width: 30%;
+        }
+        .dashboard-column h2 {
+            text-align: center;
+            border-bottom: 2px solid #e9ecef;
+            padding-bottom: 10px;
+            margin-top: 0;
         }
         .order-card {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-        }
-        .order-card.status-pending { border-left: 5px solid #ffc107; }
-        .order-card.status-preparing { border-left: 5px solid #007bff; }
-        .order-card-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #dee2e6;
-            padding-bottom: 10px;
+            background-color: #f8f9fa;
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            padding: 15px;
             margin-bottom: 15px;
         }
-        .order-card-header h2 {
-            margin: 0;
-            font-size: 1.6em;
-        }
-        .order-card-header .status {
+        .order-card-header {
             font-weight: bold;
-            padding: 5px 10px;
-            border-radius: 12px;
-            font-size: 0.9em;
+            font-size: 1.2em;
+            margin-bottom: 10px;
         }
-        .status-pending { background-color: #fff3cd; color: #856404; }
-        .status-preparing { background-color: #cce5ff; color: #004085; }
-        .order-items ul {
+        .order-card-body ul {
             list-style: none;
             padding: 0;
-            margin: 0 0 15px 0;
+            margin: 0 0 10px 0;
         }
-        .order-items li {
-            padding: 5px 0;
-        }
-        .order-items li span {
-            font-weight: bold;
-        }
-        .order-actions {
-            margin-top: auto;
-            display: flex;
-            gap: 10px;
+        .order-card-footer {
+            margin-top: 15px;
         }
         .action-btn {
-            flex-grow: 1;
-            padding: 12px;
+            width: 100%;
+            padding: 10px;
             border: none;
             border-radius: 5px;
             color: white;
             font-size: 1em;
             cursor: pointer;
-            transition: opacity 0.3s;
         }
-        .action-btn:hover {
-            opacity: 0.8;
+        .btn-pickup { background-color: #28a745; }
+        .status-tag {
+            display: inline-block;
+            padding: 5px 10px;
+            border-radius: 15px;
+            color: white;
+            font-size: 0.9em;
         }
-        .btn-prepare { background-color: #007bff; }
-        .btn-complete { background-color: #28a745; }
+        .status-pending { background-color: #ffc107; color: #212529; }
+        .status-preparing { background-color: #007bff; }
+        .status-completed { background-color: #17a2b8; }
     </style>
 </head>
 <body>
 
-    <h1>Order Management Dashboard</h1>
-    <div id="orders-dashboard">
-        <!-- Order cards will be loaded here -->
+    <h1>FOH Order Dashboard</h1>
+    <div class="dashboard-container">
+        <div class="dashboard-column">
+            <h2>In Progress</h2>
+            <div id="inprogress-orders">
+                <!-- Pending and Preparing orders will appear here -->
+            </div>
+        </div>
+        <div class="dashboard-column">
+            <h2>Ready to Bag</h2>
+            <div id="completed-orders">
+                <!-- Completed orders will appear here -->
+            </div>
+        </div>
     </div>
 
     <script>
         const apiBaseUrl = 'http://127.0.0.1:5000';
 
-        function fetchAndDisplayOrders() {
-            const dashboard = document.getElementById('orders-dashboard');
+        function createOrderCard(order) {
+            const card = document.createElement('div');
+            card.className = 'order-card';
+
+            let itemsHtml = '<ul>';
+            order.items.forEach(item => {
+                itemsHtml += `<li>${item.quantity}x ${item.name}</li>`;
+            });
+            itemsHtml += '</ul>';
             
-            // We can reuse the KDS endpoint as it shows all pending orders
+            let statusHtml = `<span class="status-tag status-${order.status.toLowerCase()}">${order.status}</span>`;
+            let actionsHtml = '';
+
+            // FOH can mark an order as "Ready for Pickup" only after the kitchen has "Completed" it.
+            if (order.status === 'Completed') {
+                actionsHtml = `<button class="action-btn btn-pickup" onclick="updateOrderStatus(${order.orderId}, 'Ready for Pickup')">Ready for Pickup</button>`;
+            }
+
+            card.innerHTML = `
+                <div class="order-card-header">
+                    <span>Order #${order.orderId}</span> - <span>${order.restaurantName}</span>
+                </div>
+                <div class="order-card-body">
+                    ${itemsHtml}
+                </div>
+                <div class="order-card-footer">
+                    ${statusHtml}
+                    ${actionsHtml}
+                </div>
+            `;
+            return card;
+        }
+
+        function fetchAndDisplayOrders() {
+            const inProgressColumn = document.getElementById('inprogress-orders');
+            const completedColumn = document.getElementById('completed-orders');
+
             fetch(`${apiBaseUrl}/api/orders/active`)
                 .then(response => response.json())
                 .then(data => {
-                    dashboard.innerHTML = ''; // Clear current view
-
-                    if (data.length === 0) {
-                        dashboard.innerHTML = '<p>No active orders.</p>';
-                        return;
-                    }
+                    inProgressColumn.innerHTML = '';
+                    completedColumn.innerHTML = '';
 
                     data.forEach(order => {
-                        const card = document.createElement('div');
-                        card.className = `order-card status-${order.status.toLowerCase()}`;
-                        
-                        let itemsHtml = '<ul>';
-                        order.items.forEach(item => {
-                            itemsHtml += `<li><span>${item.quantity}x</span> ${item.name}</li>`;
-                        });
-                        itemsHtml += '</ul>';
-
-                        card.innerHTML = `
-                            <div class="order-card-header">
-                                <h2>Order #${order.orderId}</h2>
-                                <span class="status status-${order.status.toLowerCase()}">${order.status}</span>
-                            </div>
-                            <div class="order-items">
-                                ${itemsHtml}
-                            </div>
-                            <div class="order-actions">
-                                <button class="action-btn btn-prepare" onclick="updateOrderStatus(${order.orderId}, 'Preparing')">Start Preparing</button>
-                                <button class="action-btn btn-complete" onclick="updateOrderStatus(${order.orderId}, 'Completed')">Mark as Completed</button>
-                            </div>
-                        `;
-                        dashboard.appendChild(card);
+                        const card = createOrderCard(order);
+                        if (order.status === 'Pending' || order.status === 'Preparing') {
+                            inProgressColumn.appendChild(card);
+                        } else if (order.status === 'Completed') {
+                            completedColumn.appendChild(card);
+                        }
                     });
                 })
-                .catch(error => {
-                    console.error('Error fetching orders:', error);
-                    dashboard.innerHTML = '<p style="color: red;">Could not load orders.</p>';
-                });
+                .catch(error => console.error('Error fetching orders:', error));
         }
 
         function updateOrderStatus(orderId, newStatus) {
             fetch(`${apiBaseUrl}/api/orders/${orderId}/status`, {
                 method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
+                headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ status: newStatus }),
             })
             .then(response => response.json())
             .then(data => {
                 console.log(data.message);
-                fetchAndDisplayOrders(); // Refresh the dashboard to show the change
+                fetchAndDisplayOrders(); // Refresh the display
             })
-            .catch(error => {
-                console.error('Error updating status:', error);
-                alert('Failed to update order status.');
-            });
+            .catch(error => console.error('Error updating status:', error));
         }
 
         document.addEventListener('DOMContentLoaded', function() {
             fetchAndDisplayOrders();
-            setInterval(fetchAndDisplayOrders, 10000); // Refresh every 10 seconds
+            setInterval(fetchAndDisplayOrders, 5000); // Refresh faster for FOH
         });
     </script>
 </body>
 </html>
+
